--- a/.tekton/build-and-sign-pull-request.yaml
+++ b/.tekton/build-and-sign-pull-request.yaml
@@ -30,6 +30,8 @@ spec:
     value: Containerfile
   - name: build-args-file
     value: argfile.conf
+  - name: additional-build-secret
+    value: my-aws-auth-secret      
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
