--- a/.tekton/build-and-sign-push.yaml
+++ b/.tekton/build-and-sign-push.yaml
@@ -211,6 +211,8 @@ spec:
         - $(params.build-args[*])
       - name: BUILD_ARGS_FILE
         value: $(params.build-args-file)
+      - name: ADD_CAPABILITIES
+        value: "SYS_ADMIN"
       - name: SOURCE_ARTIFACT
         value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
       - name: CACHI2_ARTIFACT
