--- a/.tekton/build-and-sign-pull-request.yaml
+++ b/.tekton/build-and-sign-pull-request.yaml
@@ -30,6 +30,8 @@ spec:
     value: Containerfile
   - name: build-args-file
     value: argfile.conf
+  - name: additional-build-secret
+    value: my-aws-auth-secret    
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
@@ -220,6 +222,8 @@ spec:
         value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
       - name: CACHI2_ARTIFACT
         value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
+      - name: ADDITIONAL_SECRET
+        value: $(params.additional-build-secret)
       runAfter:
       - prefetch-dependencies
       taskRef:
