--- a/.tekton/build-and-sign-push.yaml
+++ b/.tekton/build-and-sign-push.yaml
@@ -26,7 +26,9 @@ spec:
   - name: dockerfile
     value: Containerfile
   - name: build-args-file
-    value: argfile.conf    
+    value: argfile.conf
+  - name: additional-build-secret
+    value: my-aws-auth-secret    
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
@@ -217,6 +219,8 @@ spec:
         value: $(tasks.prefetch-dependencies.results.SOURCE_ARTIFACT)
       - name: CACHI2_ARTIFACT
         value: $(tasks.prefetch-dependencies.results.CACHI2_ARTIFACT)
+      - name: ADDITIONAL_SECRET
+        value: $(params.additional-build-secret)    
       runAfter:
       - prefetch-dependencies
       taskRef:
