--- a/.github/workflows/kernel-list.yaml
+++ b/.github/workflows/kernel-list.yaml
@@ -1,20 +1,15 @@
-name: Python package
+name: Get Kernel List
 
 on: [pull_request]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["pypy3.10", "3.9", "3.10", "3.11"]
-
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.11'
+      - name: Install dependencies
+        run: pip install -r requirements.txt
       - name: Display kernel list
         run: python scripts/kernel-list.py
