--- a/.github/workflows/kernel-list.yaml
+++ b/.github/workflows/kernel-list.yaml
@@ -3,6 +3,8 @@ name: Get Kernel List
 on: [push]
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
     steps:
       - name: checkout repo content
         uses: actions/checkout@v2
