--- a/.github/workflows/kernel-list.yaml
+++ b/.github/workflows/kernel-list.yaml
@@ -15,6 +15,6 @@ jobs:
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt      
+          pip install -r scripts/requirements.txt      
       - name: Display kernel list
         run: python scripts/kernel-list.py
