Add matrix sample

--- a/.github/workflows/kernel-list.yaml
+++ b/.github/workflows/kernel-list.yaml
@@ -25,3 +25,6 @@ jobs:
           git add .
           git commit -m "Updating the kernel version list"
           git push
+      - name: Update matrix file
+        run: python scripts/matrix.py
+
