--- a/.github/workflows/kernel-list.yaml
+++ b/.github/workflows/kernel-list.yaml
@@ -16,8 +16,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r scripts/requirements.txt      
-      - name: Display kernel list
+      - name: Get kernel list
         run: python scripts/kernels.py
+      - name: Update matrix file
+        run: python scripts/matrix.py
       - name: Commit kernel list updates 
         run: |
           git config user.name "github-actions[bot]"
@@ -25,6 +27,4 @@ jobs:
           git add .
           git commit -m "Updating the kernel version list"
           git push
-      - name: Update matrix file
-        run: python scripts/matrix.py
 
