Changes to check script
Signed-off-by: Enrique Belarte Luque <ebelarte@redhat.com>

--- a/.github/workflows/check-and-build.yaml
+++ b/.github/workflows/check-and-build.yaml
@@ -1,6 +1,10 @@
 name: Check unbuilt items in matrix and branch 
 
 on: [push]
+  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
