Changes to check script
Signed-off-by: Enrique Belarte Luque <ebelarte@redhat.com>

--- a/.github/workflows/check-and-build.yaml
+++ b/.github/workflows/check-and-build.yaml
@@ -19,4 +19,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r scripts/requirements.txt      
       - name: Crawl and build from matrix
-        run: python scripts/check_changes.py 
+        run: python scripts/check_changes.py
+        env:
+          TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          API: ${{ GITHUB_API_URL }}
