Changes to check script
Signed-off-by: Enrique Belarte Luque <ebelarte@redhat.com>

--- a/.github/workflows/check-and-build.yaml
+++ b/.github/workflows/check-and-build.yaml
@@ -22,4 +22,4 @@ jobs:
         run: python scripts/check_changes.py
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          API: ${{ GITHUB_API_URL }}
+          API: ${{ env.GITHUB_API_URL }}
