--- a/.github/workflows/check-and-build.yaml
+++ b/.github/workflows/check-and-build.yaml
@@ -22,4 +22,4 @@ jobs:
         run: python scripts/check_changes.py
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          API: ${{ env.GITHUB_API_URL }}
+          API: $GITHUB_API_URL
