--- a/.github/workflows/check-and-build.yaml
+++ b/.github/workflows/check-and-build.yaml
@@ -1,5 +1,4 @@
-name: Check unbuilt items in matrix and branch 
-
+name: Check unbuilt items in matrix, branch and trigger builds
 on:
   workflow_dispatch:
   push: 
@@ -19,6 +18,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r scripts/requirements.txt      
       - name: Crawl and build from matrix
-        run: python scripts/check_changes.py
+        run: python scripts/check-changes.py
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
