--- a/.tekton/build-and-sign-push.yaml
+++ b/.tekton/build-and-sign-push.yaml
@@ -438,9 +438,9 @@ spec:
       taskRef:
         params:
         - name: name
-          value: sast-coverity-check-oci-ta
+          value: sast-coverity-check
         - name: bundle
-          value: quay.io/konflux-ci/tekton-catalog/task-sast-coverity-check-oci-ta:0.2@sha256:751e270304ab177f4dfe477994e0913d5efcc4929803d4c4a92b833c97bb1c89
+          value: quay.io/konflux-ci/tekton-catalog/task-sast-coverity-check:0.2
         - name: kind
           value: task
         resolver: bundles
