Update config files
Add a single point of settings and functions to download external driver version lists

Signed-off-by: Enrique Belarte Luque <ebelarte@redhat.com>

--- a/.github/workflows/check-and-build.yaml
+++ b/.github/workflows/check-and-build.yaml
@@ -18,6 +18,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r scripts/requirements.txt      
       - name: Crawl and build from matrix
-        run: python scripts/check-changes.py
+        run: python scripts/check_changes.py
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
