pull already-built kmods and remove from list

--- a/argfile.conf
+++ b/argfile.conf
@@ -12,3 +12,4 @@ DRIVER_REPO=https://github.com/NVIDIA/open-gpu-kernel-modules.git
 DRIVER_VERSION=570.86.15
 DRIVER_VENDOR=nvidia-opengpu
 UPLOAD_ARTIFACT_REPO=gitlab.com/ebelarte/artifact-storage.git
+UPLOAD_ARTIFACT_REPO_API=https://gitlab.com/api/v4/projects/66831545/repository/tree
