--- a/.github/workflows/check-and-build.yaml
+++ b/.github/workflows/check-and-build.yaml
@@ -21,3 +21,4 @@ jobs:
         run: python scripts/check_changes.py
         env:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ARTIFACT_TOKEN: ${{ secrets.ARTIFACT_TOKEN }}
