Use custom buildah-sign-oci-ta task
Signed-off-by: Enrique Belarte Luque <ebelarte@redhat.com>

--- a/.tekton/build-and-sign-pull-request.yaml
+++ b/.tekton/build-and-sign-pull-request.yaml
@@ -632,7 +632,7 @@ spec:
         - name: driverdir_pattern
           value: "opt/drivers"
       runAfter:
-      - sign-modules  
+      - build-container  
     workspaces:
     - name: git-auth
       optional: true
