Use custom buildah-sign-oci-ta task
Signed-off-by: Enrique Belarte Luque <ebelarte@redhat.com>

--- a/.tekton/build-and-sign-pull-request.yaml
+++ b/.tekton/build-and-sign-pull-request.yaml
@@ -31,7 +31,9 @@ spec:
   - name: build-args-file
     value: argfile.conf
   - name: additional-build-secret
-    value: external-auth-secret    
+    value: external-auth-secret
+  - name: driverdir_pattern
+    value: /opt/drivers 
   pipelineSpec:
     description: |
       This pipeline is ideal for building container images from a Containerfile while maintaining trust after pipeline customization.
