--- a/.tekton/buildah-sign-oci-ta.yaml
+++ b/.tekton/buildah-sign-oci-ta.yaml
@@ -148,6 +148,7 @@ spec:
     - name: driverdir_pattern
       type: string
       description: What pattern should be searched within the layer where built drivers are e.g. /mydrivers
+      default: /opt/drivers
   results:
     - name: IMAGE_DIGEST
       description: Digest of the image just built
