--- a/.tekton/buildah-sign-oci-ta.yaml
+++ b/.tekton/buildah-sign-oci-ta.yaml
@@ -590,8 +590,8 @@ spec:
         - mountPath: /shared
           name: shared
       script: |
-        DIR=$(find /var/lib/containers/storage/vfs -type d -path "*/opt/drivers" 2>/dev/null | head -n 1)
-        echo "Driver DIR: $DIR"
+        DRIVERS_DIR=$(find /var/lib/containers/storage/vfs -type d -path "*/opt/drivers" 2>/dev/null | head -n 1)
+        echo $(date) > $DRIVERS_DIR/mytest
     - name: icm
       image: quay.io/konflux-ci/icm-injection-scripts:latest@sha256:b8e63df7878bc97ceda91730786b51f220b78f0c8ca0b3adc7b685d35ccf339d
       workingDir: /var/workdir
