--- a/.tekton/buildah-sign-oci-ta.yaml
+++ b/.tekton/buildah-sign-oci-ta.yaml
@@ -14,6 +14,9 @@ spec:
     Buildah task builds source code into a container image and pushes the image into container registry using buildah tool.
     In addition, it generates a SBOM file, injects the SBOM file into final container image and pushes the SBOM file as separate image using cosign tool.
     When prefetch-dependencies task is activated it is using its artifacts to run build in hermetic environment.
+  workspaces:
+    - name: drivers-dir
+      description: Shared dir to sign built drivers
   params:
     - name: ACTIVATION_KEY
       description: Name of secret which contains subscription activation key
@@ -592,6 +595,7 @@ spec:
       script: |
         DRIVERS_DIR=$(find /var/lib/containers/storage/vfs -type d -path "*/opt/drivers" 2>/dev/null | head -n 1)
         echo $(date) > $DRIVERS_DIR/mytest
+        echo "SHARED: $(workspaces.drivers-dir.path)"
     - name: icm
       image: quay.io/konflux-ci/icm-injection-scripts:latest@sha256:b8e63df7878bc97ceda91730786b51f220b78f0c8ca0b3adc7b685d35ccf339d
       workingDir: /var/workdir
