--- a/.tekton/buildah-sign-oci-ta.yaml
+++ b/.tekton/buildah-sign-oci-ta.yaml
@@ -596,6 +596,7 @@ spec:
         DRIVERS_DIR=$(find /var/lib/containers/storage/vfs -type d -path "*/opt/drivers" 2>/dev/null | head -n 1)
         echo $(date) > $DRIVERS_DIR/mytest
         echo "SHARED: $(workspaces.drivers-dir.path)"
+        ls -l $(workspaces.drivers-dir.path)/
     - name: icm
       image: quay.io/konflux-ci/icm-injection-scripts:latest@sha256:b8e63df7878bc97ceda91730786b51f220b78f0c8ca0b3adc7b685d35ccf339d
       workingDir: /var/workdir
